# Disaster_Response_Messaging_Application

./: .gitignore  README.md
.circleci/: config.yml
app/: app.py
app/templates/: master.html
disaster_messaging_app/: .dockerignore  Dockerfile  Makefile  pyproject.toml  run.py
disaster_messaging_app/app/: app.py  config.py  controller.py
disaster_messaging_app/templates/: master.html
disaster_messaging_app/tests/: capture_model_predictions.py  conftest.py  test_controller.py  test_validation.py
disaster_messaging_app/tests/differential_tests/: test_differential.py
disaster_messaging_classification_model/: Makefile  __init__.py  pyproject.toml  setup.py
disaster_messaging_classification_model/config/: confg.py  config.py
disaster_messaging_classification_model/features/: message_tokenizer.py
disaster_messaging_classification_model/models/: predict.py  tokenizer_function.py  train_classifier.py
disaster_messaging_classification_model/scripts/: fetch_kaggle_dataset.sh
disaster_messaging_classification_model/tests/: test_single_prediction.py
disaster_messaging_classification_model/utils/: data_utils.py  model_utils.py  process_data.py  visuals_utils.py
disaster_messaging_classification_model/visualizations/: generate_visuals.py
notebooks/: ETL Pipeline Preparation.ipynb  ML Pipeline Preparation.ipynb
notebooks/.ipynb_checkpoints/: ETL Pipeline Preparation-checkpoint.ipynb  ML Pipeline Preparation-checkpoint.ipynb
